force-app/main/default/objects/Public_Site_User__c/Public_Site_User__c.object-meta.xml
<CustomObject>
    <label>Public Site User</label>
    <nameField>
        <displayFormat>U-{00000000}</displayFormat>
        <label>Site User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Site Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>