force-app/main/default/objects/Public_Site_User__c/fields/Login_Expiry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Login_Expiry_Date_Time__c</fullName>
    <label>Login Expiry Date Time</label>
    <type>DateTime</type>
</CustomField>