force-app/main/default/objects/Public_Site_User__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>